--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -382,6 +382,15 @@ header {
     &__cont-textos {
       width: 50vw;
       margin: 5vh 0;
+      .cont-iframe {
+        width: 50vw;
+        height: 50vh;
+        margin-bottom: 10vh;
+        iframe {
+          width: 100%;
+          height: 100%;
+        }
+      }
       h2 {
         @include h2;
       }
@@ -433,6 +442,26 @@ header {
     }
     &__cont-texto {
       width: 50vw;
+      .slide {
+        padding-bottom: 3vh;
+        .titulo-carrusel {
+          font-size: 4vw;
+          text-align: center;
+        }
+        img {
+          height: 80vh;
+          width: 70vw;
+        }
+      }
+      .cont-iframe {
+        width: 50vw;
+        height: 50vh;
+        margin-bottom: 10vh;
+        iframe {
+          width: 100%;
+          height: 100%;
+        }
+      }
       h2 {
         @include h2;
       }
@@ -478,14 +507,14 @@ header {
       padding-top: 15vh;
       .slide {
         padding-bottom: 3vh;
+        .titulo-carrusel {
+          font-size: 4vw;
+          text-align: center;
+        }
         img {
           height: 80vh;
           width: 70vw;
         }
-      }
-      .titulo-carrusel {
-        font-size: 4vw;
-        text-align: center;
       }
       h3 {
         @include h3;
@@ -716,6 +745,9 @@ header {
       &__cont-textos {
         width: 70vw;
         margin: 5vh 0;
+        .cont-iframe {
+          width: 70vw;
+        }
         h2 {
           font-size: 20px;
           padding: 2vh 0;
@@ -763,6 +795,20 @@ header {
       }
       &__cont-texto {
         width: 70vw;
+        .slide {
+          padding-bottom: 10vh;
+          .titulo-carrusel {
+            font-size: 25px;
+            text-align: center;
+          }
+          img {
+            height: 40vh;
+            width: 80vw;
+          }
+        }
+        .cont-iframe {
+          width: 70vw;
+        }
         h2 {
           font-size: 18px;
           padding-top: 4vw;
@@ -798,14 +844,14 @@ header {
         padding-top: 15vh;
         .slide {
           padding-bottom: 10vh;
+          .titulo-carrusel {
+            font-size: 25px;
+            text-align: center;
+          }
           img {
             height: 40vh;
             width: 80vw;
           }
-        }
-        .titulo-carrusel {
-          font-size: 25px;
-          text-align: center;
         }
         h3 {
           font-size: 16px;
